--- a/B1-Net_y_Aspectos_lexicos_de_CSharp/Tema2.html
+++ b/B1-Net_y_Aspectos_lexicos_de_CSharp/Tema2.html
@@ -268,7 +268,7 @@ pre[data-line] .line-highlight[data-end]:after {
       <div class="mume markdown-preview  ">
       <h1 class="mume-header undefined" id="tema-2">Tema 2</h1>
 
-<p><a href="./Tema_2.pdf">Descargar estos apuntes</a></p>
+<p><a href="./Tema2.pdf">Descargar estos apuntes</a></p>
 <h2 class="mume-header" id="%C3%ADndice">&#xCD;ndice</h2>
 
 <ol>
