--- a/B2-Sentecias_Control_y_Metodos/Tema4.html
+++ b/B2-Sentecias_Control_y_Metodos/Tema4.html
@@ -268,6 +268,7 @@ pre[data-line] .line-highlight[data-end]:after {
       <div class="mume markdown-preview  ">
       <h1 class="mume-header undefined" id="tema-4">Tema 4</h1>
 
+<p><a href="./Tema4.pdf">Descargar estos apuntes</a></p>
 <h2 class="mume-header" id="%C3%ADndice">&#xCD;ndice</h2>
 
 <ol>
