--- a/B1-Net_y_Aspectos_lexicos_de_CSharp/Tema1.html
+++ b/B1-Net_y_Aspectos_lexicos_de_CSharp/Tema1.html
@@ -382,7 +382,7 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 </li>
 </ul>
-<h4 class="mume-header" id="ejemplo-de-namespaces-en-las-bclhttpsdocsmicrosoftcomes-esdotnetapiviewnetcore-31"><a href="https://docs.microsoft.com/es-es/dotnet/api/?view=netcore-3.1">Ejemplo de namespaces en las BCL</a></h4>
+<h4 class="mume-header" id="ejemplo-de-namespaces-en-las-bclhttpsdocsmicrosoftcomes-esdotnetapiviewnetcore-31"><a href="https://docs.microsoft.com/es-es/dotnet/api/?view=netcore-3.1" target="_blank">Ejemplo de namespaces en las BCL</a></h4>
 
 <table>
 <thead>
@@ -393,15 +393,15 @@ pre[data-line] .line-highlight[data-end]:after {
 </thead>
 <tbody>
 <tr>
-<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system?view=netcore-3.1">System</a></td>
+<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system?view=netcore-3.1" target="_blank">System</a></td>
 <td>Tipos muy frecuentemente usados, como los tipos b&#xE1;sicos, tablas, excepciones, fechas, n&#xFA;meros aleatorios, recolector de basura, entrada/salida  en consola, etc.</td>
 </tr>
 <tr>
-<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system.io?view=netcore-3.1">System.IO</a></td>
+<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system.io?view=netcore-3.1" target="_blank">System.IO</a></td>
 <td>Manipulaci&#xF3;n de ficheros y otros flujos de datos.</td>
 </tr>
 <tr>
-<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system.collections?view=netcore-3.1">System.Collections</a></td>
+<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system.collections?view=netcore-3.1" target="_blank">System.Collections</a></td>
 <td>Colecciones de datos de uso com&#xFA;n como pilas, colas, listas, diccionarios, etc.</td>
 </tr>
 </tbody>
