Cambiado tras prueba

--- a/B2-Sentecias_Control_y_Metodos/Tema4.html
+++ b/B2-Sentecias_Control_y_Metodos/Tema4.html
@@ -347,7 +347,7 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 <h3 class="mume-header" id="programaci%C3%B3n-estructurada">Programaci&#xF3;n Estructurada</h3>
 
-<p>Durante la <strong>d&#xE9;cada de los 70</strong> diferentes autores como <a href="https://www.academia.edu/7878229/Structured_Design">Stevens, Myers y Constantine, 1974</a> y <a href="https://www.amazon.es/Structured-Design-Fundamentals-Discipline-Computer/dp/B000H39SJE">Yourdon y Constantine, 1979</a> definieron las bases de la <strong>PE</strong> (<em>programaci&#xF3;n estructurada)</em>. Esta, defini&#xF3; las bases de c&#xF3;mo modularizar el c&#xF3;digo, las cuales se usaron hasta <strong>principios de los 90</strong> donde se empez&#xF3; a popularizar la <strong>POO</strong> (<em>Programaci&#xF3;n Orientada a Objetos</em>). <mark><strong>No obstante, estos principios estar&#xE1;n tambi&#xE9;n vigentes en la POO y por tanto deberemos de conocerlos.</strong></mark></p>
+<p>Durante la <strong>d&#xE9;cada de los 70</strong> diferentes autores como <a href="https://www.academia.edu/7878229/Structured_Design" target="_blank">Stevens, Myers y Constantine, 1974</a> y <a href="https://www.amazon.es/Structured-Design-Fundamentals-Discipline-Computer/dp/B000H39SJE" target="_blank">Yourdon y Constantine, 1979</a> definieron las bases de la <strong>PE</strong> (<em>programaci&#xF3;n estructurada)</em>. Esta, defini&#xF3; las bases de c&#xF3;mo modularizar el c&#xF3;digo, las cuales se usaron hasta <strong>principios de los 90</strong> donde se empez&#xF3; a popularizar la <strong>POO</strong> (<em>Programaci&#xF3;n Orientada a Objetos</em>). <mark><strong>No obstante, estos principios estar&#xE1;n tambi&#xE9;n vigentes en la POO y por tanto deberemos de conocerlos.</strong></mark></p>
 <h4 class="mume-header" id="definiciones-formales-a-la-hora-de-modularizar-en-pe">Definiciones formales a la hora de modularizar en PE</h4>
 
 <ul>
@@ -778,7 +778,7 @@ Para ello: <strong><code>Ctrl+.</code></strong> sobre los par&#xE1;metros y a co
 </ul>
 <h4 class="mume-header" id="definir-par%C3%A1metros-de-entrada">Definir par&#xE1;metros de entrada</h4>
 
-<h5 class="mume-header" id="paso-por-valorhttpsdocsmicrosoftcomes-esdotnetcsharpprogramming-guideclasses-and-structspassing-value-type-parameters">Paso por <a href="https://docs.microsoft.com/es-es/dotnet/csharp/programming-guide/classes-and-structs/passing-value-type-parameters">valor</a></h5>
+<h5 class="mume-header" id="paso-por-valorhttpsdocsmicrosoftcomes-esdotnetcsharpprogramming-guideclasses-and-structspassing-value-type-parameters">Paso por <a href="https://docs.microsoft.com/es-es/dotnet/csharp/programming-guide/classes-and-structs/passing-value-type-parameters" target="_blank">valor</a></h5>
 
 <ul>
 <li>
@@ -1028,7 +1028,7 @@ En el siguiente ejemplo vamos a ver que pasa usando el tipo referencia b&#xE1;si
 </svg>
 </p></li>
 </ul>
-<h5 class="mume-header" id="paso-por-referencia-con-inhttpsdocsmicrosoftcomes-esdotnetcsharplanguage-referencekeywordsin-parameter-modifier">Paso por referencia con <a href="https://docs.microsoft.com/es-es/dotnet/csharp/language-reference/keywords/in-parameter-modifier">in</a></h5>
+<h5 class="mume-header" id="paso-por-referencia-con-inhttpsdocsmicrosoftcomes-esdotnetcsharplanguage-referencekeywordsin-parameter-modifier">Paso por referencia con <a href="https://docs.microsoft.com/es-es/dotnet/csharp/language-reference/keywords/in-parameter-modifier" target="_blank">in</a></h5>
 
 <ul>
 <li>
@@ -1527,7 +1527,7 @@ Esto &#xFA;ltimo requiere de una reflexi&#xF3;n tras elegir un nombre.
 <ol>
 <li>
 <p>Est&#xE1;n relacionados entre s&#xED;, pero aparentemente uno est&#xE1; subordinado al otro.<br>
-Un ejemplo puede ser el m&#xE9;todo est&#xE1;tico <a href="https://docs.microsoft.com/es-es/dotnet/api/system.int32.tryparse?view=netcore-3.1#System_Int32_TryParse_System_String_System_Int32__">TryParse</a> del tipo <strong><code>int</code></strong><br>
+Un ejemplo puede ser el m&#xE9;todo est&#xE1;tico <a href="https://docs.microsoft.com/es-es/dotnet/api/system.int32.tryparse?view=netcore-3.1#System_Int32_TryParse_System_String_System_Int32__" target="_blank">TryParse</a> del tipo <strong><code>int</code></strong><br>
 <strong><code>bool TryParse (string s, out int result) {...}</code></strong><br>
 Devuelve si ha podido o n&#xF3; transformar la cadena <strong><code>s</code></strong> a entero, y si lo ha podido hacer (<em>subordinaci&#xF3;n</em>) me devolver&#xE1; en <strong><code>result</code></strong> el valor entero resultado de la transformaci&#xF3;n.</p>
 </li>
