--- a/B1-Net_y_Aspectos_lexicos_de_CSharp/Tema1.html
+++ b/B1-Net_y_Aspectos_lexicos_de_CSharp/Tema1.html
@@ -290,9 +290,9 @@ pre[data-line] .line-highlight[data-end]:after {
 <ul>
 <li>NET Son una serie de tecnolog&#xED;as desarrolladas por Microsoft&#xAE; en 2002 para interoperabilidad de aplicaciones con la red Internet.</li>
 <li>En sus inicios se ha denominado <strong>.NET Framework</strong> hasta la versi&#xF3;n <strong>4.8</strong> a&#xFA;n en uso.</li>
-<li>En la <strong>actualidad</strong> estas tecnolog&#xED;as se han <strong>redefinido</strong> entorno al conocido como <a href="https://dotnet.microsoft.com/">.NET Core</a> teniendo como base.
+<li>En la <strong>actualidad</strong> estas tecnolog&#xED;as se han <strong>redefinido</strong> entorno al conocido como <a href="https://dotnet.microsoft.com/" target="_blank">.NET Core</a> teniendo como base.
 <ul>
-<li>El <a href="https://github.com/dotnet">c&#xF3;digo abierto</a> y <strong>Multiplataforma.</strong></li>
+<li>El <a href="https://github.com/dotnet" target="_blank">c&#xF3;digo abierto</a> y <strong>Multiplataforma.</strong></li>
 <li>Desarrollos basados en Microservicios en la nube, CI/CD y Contenedores.</li>
 </ul>
 </li>
@@ -301,7 +301,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <h3 class="mume-header" id="net-core">.NET Core</h3>
 
 <ul>
-<li>En 2012 Microsoft public&#xF3; y estandariz&#xF3; a trav&#xE9;s de la <a href="https://www.ecma-international.org/publications/files/ECMA-ST/ECMA-335.pdf">ECMA-335</a> la arquitectura usada en .NET para que terceros pudieran hacer sus propias implementaciones.</li>
+<li>En 2012 Microsoft public&#xF3; y estandariz&#xF3; a trav&#xE9;s de la <a href="https://www.ecma-international.org/publications/files/ECMA-ST/ECMA-335.pdf" target="_blank">ECMA-335</a> la arquitectura usada en .NET para que terceros pudieran hacer sus propias implementaciones.</li>
 <li><strong>.NET Core</strong> es la &#xFA;ltima implementaci&#xF3;n de esta arquitectura y est&#xE1; basada en los siguientes componentes principales entre otros:
 <ul>
 <li>Entorno com&#xFA;n de ejecuci&#xF3;n <strong>CLR</strong> (Common Language Runtime)</li>
