deploy: programacioniesbalmis/programacioniesbalmis@42d5050b4d438749307e33f96c53032b5bb7d20c

--- a/B2-Sentencias_Control_y_Metodos/Ejercicios/2_ejercicios_bucles/2_ejercicios_bucles_parte1.html
+++ b/B2-Sentencias_Control_y_Metodos/Ejercicios/2_ejercicios_bucles/2_ejercicios_bucles_parte1.html
@@ -346,7 +346,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <h2 class="mume-header" id="white_check_mark-ejercicio-8">&#x2705; Ejercicio 8</h2>
 
 <blockquote>
-<p>Programa que obtenga el cociente y el resto de dos n&#xFA;meros enteros positivos mediante restas. Esto es, para calcular <strong><code>n / 2</code></strong> haga <strong><code>n -= 2</code></strong> mientras <strong><code>n &gt;= 2</code></strong> y cuente el n&#xFA;mero de restas.</p>
+<p>Programa que obtenga el cociente y el resto de dividir dos n&#xFA;meros enteros positivos utilizando restas restas. Por ejemplo, para calcular <strong><code>n / 2</code></strong> haga <strong><code>n -= 2</code></strong> mientras <strong><code>n &gt;= 2</code></strong> y cuente el n&#xFA;mero de veces que ha restado.</p>
 </blockquote>
 <hr>
 <h2 class="mume-header" id="ejercicio-9">Ejercicio 9</h2>
