deploy: programacioniesbalmis/programacioniesbalmis@f7fa77d75965e1f3e50ff203c077abf2ba95dd89

--- a/PrimerDia/guia_didactica_semipresencial.html
+++ b/PrimerDia/guia_didactica_semipresencial.html
@@ -463,7 +463,7 @@ La <strong>asistencia a la tutor&#xED;a colectiva</strong> tiene car&#xE1;cter <
 </ul>
 </li>
 <li>
-<p><strong>Quincena del 8 enero - 21 noviembre</strong></p>
+<p><strong>Quincena del 8 noviembre - 21 noviembre</strong></p>
 <ul>
 <li><strong>Semana 1</strong> <em>Tema 5.1</em>: Manejo de cadenas (inmutables y mutables).</li>
 <li><strong>Semana 2</strong> <em>Tema 5.1</em>: Tablas homog&#xE9;neas unidimensionales (Arrays).</li>
