deploy: programacioniesbalmis/programacioniesbalmis@c5df5149d71fb39fc353ac5af7d591acc35b3e40

--- a/B3-POO1_TE_y_ER/Ejercicios/3_ejercicios_matrices/3_ejercicios_matrices.html
+++ b/B3-POO1_TE_y_ER/Ejercicios/3_ejercicios_matrices/3_ejercicios_matrices.html
@@ -436,7 +436,8 @@ Posteriormente se mostrar&#xE1; el array de dos matrices dentadas de la siguient
  9,10,11,12	         21,22
 </code></pre></li>
 </ul>
-<p>&#x1F4A1; <strong>Pista:</strong>  La tabla se crear&#xE1; de la siguiente manera int[][][] m = new int[2][][]. Recuerda que las tablas se dimensionan con la palabra reservada new, y deber&#xE1;s redimensionar tanto, el n&#xFA;mero de filas de cada tabla como el n&#xFA;mero de columnas que tiene cada fila.</p>
+<p>&#x1F4A1; <strong>Pista1:</strong>  La tabla se crear&#xE1; de la siguiente manera int[][][] m = new int[2][][]. Recuerda que las tablas se dimensionan con la palabra reservada new, y deber&#xE1;s redimensionar tanto, el n&#xFA;mero de filas de cada tabla como el n&#xFA;mero de columnas que tiene cada fila.</p>
+<p>&#x1F4A1; <strong>Pista2:</strong>  Para que el ejercicio sea considerado como <strong>Apto</strong>, no es necesario mostrar 100% las tablas dentadas como se propone. Pero si deseas hacerlo, puedes partir del ejercicio de auto-evaluaci&#xF3;n 6 para hacerlo.</p>
 </blockquote>
 <hr>
 <h2 class="mume-header" id="ejercicio-9">Ejercicio 9</h2>
