deploy: programacioniesbalmis/programacioniesbalmis@51afac97fa2ebbac4967506c8450d2bd2a97e40c

--- a/B3-POO1_TE_y_ER/ProyectoNavidad/CarreraCaballos.html
+++ b/B3-POO1_TE_y_ER/ProyectoNavidad/CarreraCaballos.html
@@ -297,6 +297,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>En caso de descubrir a alg&#xFA;n alumno que ha copiado el proyecto se le suspender&#xE1; el mismo.</li>
 </ul>
 </div>
+<p><a href="./CarreraCaballos.pdf">Descargar estos apuntes</a></p>
 <div style="padding: 3pt; font-weight: bold; background-color: gainsboro; margin: 5pt 0pt 5pt 0pt;">
 Especificaciones del programa</div>
 <p><u>Consideraciones iniciales</u></p>
