deploy: programacioniesbalmis/programacioniesbalmis@9db344ea68dae65091730f0ab7da7008fb727387

--- a/B6-POO4_Avanzada/Ejercicios/1_ejercicios_librerias/1_ejercicios_librerias.html
+++ b/B6-POO4_Avanzada/Ejercicios/1_ejercicios_librerias/1_ejercicios_librerias.html
@@ -283,7 +283,7 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <blockquote>
 <p>Este ejercicio se desarrollar&#xE1; a partir de una librer&#xED;a de terceros descargada de <strong>NuGet</strong> que facilita el dise&#xF1;o de la salida por consola, la librer&#xED;a se llama <strong><a href="https://github.com/spectreconsole/spectre.console">spectre.console</a></strong> y va a permitir, entre otras cosas, crear tablas y  gr&#xE1;ficos a partir de unos datos, <a href="https://spectreconsole.net/">Web Oficial Spectre Console</a>.<br>
-El ejercicio constar&#xE1; de leer la informaci&#xF3;n del fichero <strong>datos.csv</strong>, pasado como recurso. A partir de la lectura del archivo y con la ayuda de la .dll, se crear&#xE1; una tabla y dos gr&#xE1;ficos (uno con el dato temperatura y el otro con el dato velocidad del viento) con el aspecto parecido al de la imagen:</p>
+El ejercicio constar&#xE1; de leer la informaci&#xF3;n del fichero <strong><a href="https://programacioniesbalmis.github.io/B6-POO4_Avanzada/Ejercicios/1_ejercicios_librerias/datos.csv">datos.csv</a></strong>, pasado como recurso. A partir de la lectura del archivo y con la ayuda de la .dll, se crear&#xE1; una tabla y dos gr&#xE1;ficos (uno con el dato temperatura y el otro con el dato velocidad del viento) con el aspecto parecido al de la imagen:</p>
 </blockquote>
 <p><img src="../assets/tablaigraficas.png" alt="Soluci&#xF3;n ejericico"></p>
 <div style="page-break-after:always;"></div>
