deploy: programacioniesbalmis/programacioniesbalmis@7a26d9c4676e2a7f2ecbd3df6296bae9ed3ec3c2

--- a/B6-POO4_Avanzada/Ejercicios/4_ejercicios_interfaces_y_genericos/4_ejercicios_interfaces_y_genericos.html
+++ b/B6-POO4_Avanzada/Ejercicios/4_ejercicios_interfaces_y_genericos/4_ejercicios_interfaces_y_genericos.html
@@ -614,7 +614,7 @@ La clase <strong><code>Disc</code></strong> tendr&#xE1; un indizador que permiti
 Para los m&#xE9;todos de <strong><code>IMedia</code></strong>, llamar&#xE1; a los respectivos del dispositivo activo en ese momento.</p>
 <ul>
 <li><strong>MessageToDisplay</strong>: Devolver&#xE1; una cadena con el dispositivo activo, el estado devuelto por el correspondiente m&#xE9;todo del dispositivo activo y el men&#xFA; de opciones para manejar nuestro <strong><code>DABRadioCD</code></strong>.<br>
-<span style="color : DarkSlateBlue">PAUSED - MODO: CD<br>
+<span style="color : DarkSlateBlue">MODO: CD<br>
 STATE: PLAYING... Album: Thriller Artist: Michael Jackson. Track 1 - Wanna Be Startin&apos; Somethin<br>
 [1]Play [2]Pause [3]Stop [4]Prev [5]Next [6]Switch [7]Insert CD [8]Extract CD, [ESC]Turn off</span></li>
 <li><strong>Insertar un CD</strong>: Devolver&#xE1; una excepci&#xF3;n si ya hay un CD dentro del reproductor. Si no lo hay, pasaremos a modo CD y empezar&#xE1; la reproducci&#xF3;n autom&#xE1;ticamente.</li>
