--- a/B8-Programacion_Funcional/Tema11_4.html
+++ b/B8-Programacion_Funcional/Tema11_4.html
@@ -282,7 +282,7 @@ justo después del front matter
   font-family: 'Catamaran';
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/catamaran/v15/o-0bIpQoyXQa2RxT7-5B6Ryxs2E_6n1iPHjd5a7dvg.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/catamaran/v17/o-0bIpQoyXQa2RxT7-5B6Ryxs2E_6n1iPHjd5a7dvg.ttf) format('truetype');
 }
 .contenedor {
   display: flex;
@@ -343,7 +343,7 @@ justo después del front matter
 </style>
 <h1 class="mume-header undefined" id="tema-114">Tema 11.4</h1>
 
-<p><a href="./Tema11_4.pdf">Descargar estos apuntes</a></p>
+<p>Descargar estos apuntes en <a href="./Tema11_4.pdf">pdf</a> o <a href="./Tema11_4.html">html</a></p>
 <h2 class="mume-header undefined" id="%C3%ADndice">&#xCD;ndice</h2>
 
 <ol>
