deploy: programacioniesbalmis/programacioniesbalmis@01ce04bf7ecf7c43b7671bccc399eee5cd89c710

--- a/Manual/Manual de instalación.html
+++ b/Manual/Manual de instalación.html
@@ -261,212 +261,96 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header undefined" id="tema-1">Tema 1</h1>
-
-<p>Descargar estos apuntes en <a href="./Tema1.pdf">pdf</a> o <a href="./Tema1.html">html</a></p>
-<h2 class="mume-header" id="%C3%ADndice">&#xCD;ndice</h2>
+      <h1 class="mume-header undefined" id="manual-de-instalaci%C3%B3n-visual-studio-code">Manual de instalaci&#xF3;n Visual Studio Code</h1>
 
 <ol>
-<li><a href="#%C3%ADndice">&#xCD;ndice</a></li>
-<li><a href="#introducci%C3%B3n-a-net-o-dotnet">Introducci&#xF3;n a .NET o dotnet</a>
-<ol>
-<li><a href="#un-poco-de-historia">Un poco de historia</a></li>
-<li><a href="#versiones-del-lenguaje-c-csharp-seg%C3%BAn-la-plataforma">Versiones del lenguaje C# (CSharp) seg&#xFA;n la plataforma</a></li>
-<li><a href="#net-6-lts">.NET 6 LTS</a></li>
-</ol>
-</li>
+<li><a href="#instalamos-el-kit-de-desarrollo-net-core-sdk-y-el-net-framework">Instalamos el kit de desarrollo .NET Core SDK y el .NET Framework</a></li>
+<li><a href="#instalaci%C3%B3n-visual-studio-code">Instalaci&#xF3;n Visual Studio Code</a></li>
+<li><a href="#instalar-extensi%C3%B3n-de-c">Instalar extensi&#xF3;n de C#</a></li>
+<li><a href="#creaci%C3%B3n-de-un-proyecto-nuevo">Creaci&#xF3;n de un proyecto nuevo</a></li>
 </ol>
 <div style="page-break-after:always;"></div>
-<h2 class="mume-header" id="introducci%C3%B3n-a-net-o-dotnet">Introducci&#xF3;n a .NET o dotnet</h2>
-
-<h3 class="mume-header" id="un-poco-de-historia">Un poco de historia</h3>
+<h2 class="mume-header" id="instalamos-el-kit-de-desarrollo-net-core-sdk-y-el-net-framework">Instalamos el kit de desarrollo .NET Core SDK y el .NET Framework</h2>
 
 <ul>
 <li>
-<p><strong>2002</strong> Aparece <strong>.NET</strong> Son una serie de tecnolog&#xED;as desarrolladas por Microsoft para interoperabilidad de aplicaciones con la red Internet en respuesta a la aparici&#xF3;n de <strong>Java&#x2122;&#xFE0F;</strong> de la mano de Sun Microsystems.<br>
-En sus inicios, se le denomin&#xF3; <strong>.NET Framework</strong> hasta la versi&#xF3;n <strong>4.8</strong> a&#xFA;n en uso. Sin embargo, este framework solo estaba implementado y soportados en los <strong>sistemas operativos de Windows</strong>.</p>
+<p>Para descargarnos todas las herramientas del kit iremos al <strong><a href="https://dotnet.microsoft.com/en-us/download">enlace oficial</a></strong></p>
 </li>
 <li>
-<p><strong>2004</strong> Al estar publicadas las especificaciones del Framework como est&#xE1;ndar por la <strong><a href="https://www.ecma-international.org/">ECMA</a></strong> se creo una versi&#xF3;n de <strong>.NET Framework</strong> para entornos Unix, Linux denominada <strong><a href="https://www.mono-project.com/">Proyecto Mono</a></strong> que a lo largo de su historia ha tenido diferentes impulsores</p>
-</li>
-<li>
-<p><strong>2012</strong> Este a&#xF1;o, Microsoft decidi&#xF3; redefinir la tecnolog&#xED;a y el Framework para adaptarlo a las nuevas arquitecturas en la nube. Para ello, se baso en los siguientes pilares:</p>
-<ol>
-<li>El &quot;<a href="https://es.wikipedia.org/wiki/C%C3%B3digo_abierto">c&#xF3;digo abierto</a>&quot; hospedado en el repositorio <a href="https://github.com/dotnet">https://github.com/dotnet</a>.</li>
-<li>Soporte para plataformas <strong>Windows</strong>, <strong>Linux</strong>, <strong>MacOS X</strong> y <strong>Docker</strong>.</li>
-<li>Aumentar la eficiencia en tama&#xF1;o, velocidad de ejecuci&#xF3;n y recursos consumidos.</li>
-<li>Desarrollos basados en <a href="https://es.wikipedia.org/wiki/Arquitectura_de_microservicios">Arquitecturas de Microservicios</a>, <a href="https://es.wikipedia.org/wiki/CI/CD">CI/CD</a>, etc.</li>
-<li>Conservar muchas de las librer&#xED;as y funcionalidades a&#xF1;adidas en los &#xFA;ltimos a&#xF1;os al .NET Framework, eliminando aquellas partes obsoletas que solo se conservaban por mantener la compatibilidad hacia atr&#xE1;s.</li>
-</ol>
-<p>Como <strong>.NET Framework</strong> estaba hasta la versi&#xF3;n <strong>4.8</strong>, Microsoft le quit&#xF3; el apellido &apos;<em><strong>Framework</strong></em>&apos; y le puso &apos;<em><strong>Core</strong></em>&apos;. De tal manera que, para evitar confusiones, esta nueva versi&#xF3;n pas&#xF3; a llamarse <strong>.NET Core</strong> desde las versiones <strong>1.0 en el 2016</strong> hasta la <strong>3.1 en el 2019</strong>. Posteriormente aparece una versi&#xF3;n <strong>5 en el 2020</strong> donde se le quita el apellido &apos;<em><strong>Core</strong></em>&apos; y se queda <strong>.NET 5</strong> a solas, pues ya no hay posibles confusiones con las versiones del antiguo <strong>.NET Framework</strong></p>
-</li>
-<li>
-<p><strong>2021</strong> Aparece la versi&#xF3;n <strong>.NET 6 <a href="https://es.wikipedia.org/wiki/Soporte_de_largo_plazo">LTS</a></strong> llamada a estar activa hasta 2024 donde aparecer&#xE1; la pr&#xF3;xima LST denominada <strong>.NET 8</strong></p>
+<p>Escogeremos el S.O. y despu&#xE9;s descargaremos tanto el .NET SDK como el .NET Runtime</p>
 </li>
 </ul>
 <div align="center">
-  <img height src="Img/roadmap.png">
+  <img height src="Img/descargas.png">
 </div>
 <div style="page-break-after:always;"></div>
-<h3 class="mume-header" id="versiones-del-lenguaje-c-csharp-seg%C3%BAn-la-plataforma">Versiones del lenguaje C# (CSharp) seg&#xFA;n la plataforma</h3>
+<h2 class="mume-header" id="instalaci%C3%B3n-visual-studio-code">Instalaci&#xF3;n Visual Studio Code</h2>
 
-<p>Si vamos a la <a href="https://docs.microsoft.com/es-es/dotnet/csharp/language-reference/configure-language-version">documentaci&#xF3;n oficial</a> podemos resumir:</p>
-<table>
-<thead>
-<tr>
-<th>Plataforma</th>
-<th>Versi&#xF3;n de C#</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>.NET Framework 4.8</td>
-<td>7.3</td>
-</tr>
-<tr>
-<td>.NET Core 3.1</td>
-<td>8</td>
-</tr>
-<tr>
-<td><strong>.NET 6.x</strong></td>
-<td><strong>10</strong></td>
-</tr>
-</tbody>
-</table>
-<blockquote>
-<p>&#x1F4CC; <strong>Nota:</strong> Como pasa en otros lenguajes con historia como por ejemplo Java, Php, C++, etc. tanto la sintaxis del lenguaje como las estructuras del mismo han ido evolucionando a lo largo de las versiones. Aunque a lo largo de los apuntes vamos a tratar de indicar la versi&#xF3;n aquellos aspectos sint&#xE1;cticos relevantes. Podremos encontrar varias formas de hacer las cosas, por eso es importante que entendamos el concepto.</p>
-</blockquote>
-<h3 class="mume-header" id="net-6-lts">.NET 6 LTS</h3>
-
-<ul>
-<li>
-<p>Como hemos comentado, en <strong>2012</strong> se <strong>public&#xF3; y estandariz&#xF3;</strong> a trav&#xE9;s de la <a href="https://www.ecma-international.org/publications/files/ECMA-ST/ECMA-335.pdf%22">ECMA-335</a> la nueva arquitectura usada en .NET para que terceros pudieran hacer sus propias implementaciones y cuya primera implementaci&#xF3;n se liber&#xF3; en 2016 bajo el nombre .NET Core 1.0.</p>
-</li>
-<li>
-<p><strong>.NET 6 LTS</strong> se liber&#xF3; en en <strong>diciembre de 2021</strong> y es la &#xFA;ltima implementaci&#xF3;n de esta arquitectura que cuenta con soporte de larga duraci&#xF3;n.</p>
-</li>
-<li>
-<p>Sus componentes b&#xE1;sicos comunes a sus predecesoras y que debemos conocer son:</p>
-<ul>
-<li>Entorno com&#xFA;n de ejecuci&#xF3;n <strong>CLR</strong> (Common Language Runtime)</li>
-<li>Lenguaje Intermedio Com&#xFA;n <strong><a href="https://es.wikipedia.org/wiki/Common_Intermediate_Language">CIL</a></strong> (Common Intermediate Language)</li>
-<li>Biblioteca de clases de .NET Core <strong>BCL</strong> (Base Class Library)</li>
-<li>Sistema com&#xFA;n del tipos <strong>CTS</strong> (Common Type System)
-<ul>
-<li>Especificaci&#xF3;n com&#xFA;n del lenguaje <strong>CLS</strong> (Common Language Specification)</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-<div style="page-break-after:always;"></div>
-<h4 class="mume-header" id="common-language-runtime-clr">Common Language Runtime (CLR)</h4>
-
+<p>Una vez instalado el kit de desarrollo, instalaremos el editor [Visual Studio Code] (<a href="https://code.visualstudio.com">https://code.visualstudio.com</a>)</p>
 <div align="center">
-  <img height="300" src="Img/clr.jpg">
+  <img height src="Img/descargaVisualStudio.png">
 </div>
-<ul>
-<li>Tambi&#xE9;n podemos llamarlo <strong>.NET Runtime</strong> o <strong>Runtime</strong> a secas o si quisi&#xE9;ramos explicarlo de forma informal y simplificada con nuestras palabras podr&#xED;amos decir que ... Runtime = &quot;<em>Software que se encarga de ejecutar algo y por tanto sabe como hacerlo</em>&quot;.</li>
-<li>De una manera m&#xE1;s &apos;<em>formal</em>&apos; podemos decir que el CLR es la capa que hay justo por encima del SO y <strong>se encarga de gestionar la ejecuci&#xF3;n de las aplicaciones</strong> en el. Su uso es muy com&#xFA;n y existen otros runtime como el equivalente Java&#x2122;&#xFE0F; denominado <strong>JRE</strong> (Java&#x2122;&#xFE0F; <strong>Runtime</strong> Environment)</li>
-<li>Todo esto soluciona una serie de problemas de las aplicaciones tradicionales de la d&#xE9;cada de los 90, como:
-<ul>
-<li>Ejecuci&#xF3;n multiplataforma: <strong>Si tengo un Runtime para la plataforma y arquitectura puedo ejecutar el programa</strong>.</li>
-<li>Infierno de las DLL&#x2019;s.</li>
-<li>Integraci&#xF3;n de lenguajes.</li>
-<li>Gesti&#xF3;n de memoria.</li>
-</ul>
-</li>
-</ul>
-<div style="page-break-after:always;"></div>
-<h4 class="mume-header" id="common-intermediate-language-cil">Common Intermediate Language (CIL)</h4>
+<h2 class="mume-header" id="instalar-extensi%C3%B3n-de-c">Instalar extensi&#xF3;n de C#</h2>
 
-<ul>
-<li>.NET No genera <a href="https://es.wikipedia.org/wiki/Lenguaje_de_m%C3%A1quina">c&#xF3;digo m&#xE1;quina</a> para ninguna plataforma concreta.</li>
-<li>Se genera un c&#xF3;digo especial denominado <strong>IL</strong> que es el que interpreta el CLR. En otros <em>&apos;RunTimes&apos;</em> como JRE se le conoce como <strong>ByteCode</strong>.</li>
-<li>Se encarga de transformarlo a c&#xF3;digo maquina el <strong>JIT</strong> (Just in time compiler) o jitter que forma parte del CLR. Esta compilaci&#xF3;n, como el nombre indica, se hace din&#xE1;micamente o en el momento.</li>
-</ul>
+<p>Para instalar una extensi&#xF3;n pulsamos aqu&#xED;:</p>
 <div align="center">
-  <img height="500" src="Img/cil.png">
+  <img height src="Img/Extensio&#x301;nC#.png">
 </div>
-<div style="page-break-after:always;"></div>
-<h4 class="mume-header" id="ensamblado-o-ensamble">Ensamblado o Ensamble</h4>
-
-<ul>
-<li>Al compilar C# o F# generaremos normalmente <strong>grupo de ficheros con extensi&#xF3;n DLL y/o EXE</strong> que denominaremos <strong>ensamblados</strong>.</li>
-<li>Un ensamblado es portable a cualquier SO con el CLR de .NET Core instalado.</li>
-<li>Estar&#xE1; formado por:
-<ul>
-<li><strong>Metadatos</strong> (Datos sobre los datos):
-<ul>
-<li><strong>Manifiesto</strong> con la descripci&#xF3;n del ensamblado y la <strong>firma del mismo</strong>.</li>
-<li>Informaci&#xF3;n sobre <strong>tipos</strong> incluidos y definidos en el ensamblado.</li>
-</ul>
-</li>
-<li><strong>Programa</strong> con el c&#xF3;digo ejecutable en <strong>CIL</strong>.</li>
-<li><strong>Recursos</strong> agrupados l&#xF3;gicamente como im&#xE1;genes, v&#xED;deo, Tipos de letra, sonido, etc...</li>
-</ul>
-</li>
-</ul>
-<div style="page-break-after:always;"></div>
-<h4 class="mume-header" id="librer%C3%ADas-de-clase-base-bcl">Librer&#xED;as de clase base BCL</h4>
-
-<ul>
-<li>Tambi&#xE9;n definidas en la ECMA-332</li>
-<li>Librer&#xED;as incluidas en el <strong>.NET SDK</strong> para el desarrollo, por defecto, en todos los lenguajes soportador por la plataforma.</li>
-<li>A trav&#xE9;s de las clases suministradas en ella, es posible desarrollar cualquier tipo de aplicaci&#xF3;n:
-<ul>
-<li>Aplicaciones de consola, escritorio, web, m&#xF3;vil devices, <a href="https://es.wikipedia.org/wiki/Internet_de_las_cosas">IoT</a>, etc...</li>
-<li>Microservicios en la nube, como por ejemplo una API Rest.</li>
-<li>Comunicaciones en red.</li>
-<li>etc.</li>
-</ul>
-</li>
-<li>Adem&#xE1;s incluyen todo tipo de TAD&#x2019;s.</li>
-<li>Se organizan en <strong>namespaces</strong> o espacios de nombres.
-<ul>
-<li>Un namespace es la forma que tiene C# de organizar los tipos de datos.</li>
-<li>Esta organizaci&#xF3;n es jer&#xE1;rquica y en forma de &#xE1;rbol.</li>
-</ul>
-</li>
-</ul>
-<h4 class="mume-header" id="a-hrefhttpsdocsmicrosoftcomes-esdotnetapiviewnetcore-31-target_blankejemplo-de-namespaces-en-las-bcla"><a href="https://docs.microsoft.com/es-es/dotnet/api/?view=netcore-3.1" target="_blank">Ejemplo de namespaces en las BCL</a></h4>
-
-<table>
-<thead>
-<tr>
-<th>Espacio de nombres</th>
-<th>Uso definiciones que contiene</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system?view=netcore-3.1" target="_blank">System</a></td>
-<td>Tipos muy frecuentemente usados, como los tipos b&#xE1;sicos, tablas, excepciones, fechas, n&#xFA;meros aleatorios, recolector de basura, entrada/salida  en consola, etc.</td>
-</tr>
-<tr>
-<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system.io?view=netcore-3.1" target="_blank">System.IO</a></td>
-<td>Manipulaci&#xF3;n de ficheros y otros flujos de datos.</td>
-</tr>
-<tr>
-<td><a href="https://docs.microsoft.com/es-es/dotnet/api/system.collections?view=netcore-3.1" target="_blank">System.Collections</a></td>
-<td>Colecciones de datos de uso com&#xFA;n como pilas, colas, listas, diccionarios, etc.</td>
-</tr>
-</tbody>
-</table>
-<div style="page-break-after:always;"></div>
-<h4 class="mume-header" id="sistema-com%C3%BAn-de-tipos-cts">Sistema Com&#xFA;n de Tipos (CTS)</h4>
-
-<ul>
-<li>Cada lenguaje gestionado puede tener y definir sus propios tipos de datos que pueden ser diferentes.</li>
-<li>Pero todos ellos deben cumplir unas reglas para que el <strong>CLR</strong> los acepte a trav&#xE9;s del <strong>CIL</strong> generado.</li>
-</ul>
-<h5 class="mume-header" id="especificaci%C3%B3n-com%C3%BAn-del-lenguaje-cls">Especificaci&#xF3;n Com&#xFA;n del Lenguaje (CLS)</h5>
-
-<ul>
-<li>Reglas que tienen que seguir las definiciones de los tipos de un lenguaje gestionado para poder ser accedidos por otro lenguaje gestionado.</li>
-</ul>
+<p>Buscamos la extensi&#xF3;n que queremos instalar, la seleccionamos y pulsamos Install.</p>
 <div align="center">
-  <img height="300" src="Img/cts.png">
+  <img height src="Img/Extensio&#x301;nC#.png">
+</div>
+<p>Volvemos a pulsar el bot&#xF3;n de extensiones para cerrar las extensiones.</p>
+<p>Si no nos aparece el explorador del proyecto pulsamos aqu&#xED;:</p>
+<div align="center">
+  <img height src="Img/explorador.png">
+</div>
+<h2 class="mume-header" id="creaci%C3%B3n-de-un-proyecto-nuevo">Creaci&#xF3;n de un proyecto nuevo</h2>
+
+<p>Creamos una carpeta para nuestro proyecto.</p>
+<div align="center">
+  <img height src="Img/carpeta.png">
+</div>
+<p>Abrimos el programa y entramos dentro de la carpeta. Seleccionamos una carpeta de<br>
+trabajo que crearemos para el proyecto.</p>
+<div align="center">
+  <img height src="Img/abrirCarpeta.png">
+</div>
+<p>Abrimos un terminal nuevo:</p>
+<div align="center">
+  <img height src="Img/abrirTerminal.png">
+</div>
+<p>Desde el terminal creamos el proyecto con: dotnet new console -n miproyecto</p>
+<div align="center">
+  <img height src="Img/terminal.png">
+</div>
+<p>Crear&#xE1; una carpeta. Debemos entrar en ella con cd.<br>
+Entrar en proyecto con Cd y la ruta.</p>
+<div align="center">
+  <img height src="Img/cd.png">
+</div>
+<p>Te puede aparecer un mensaje. Yes.<br>
+Si no aparece el mensaje o le damos a No, vamos a View -&gt; Command Palette para<br>
+generar archivos para poder compilar y ejecutar.</p>
+<div align="center">
+  <img height src="Img/commandPalette.png">
+</div>
+<p>Debemos Restaurar OmniSharp</p>
+<div align="center">
+  <img height src="Img/Omnisharp.png">
+</div>
+<p>Despu&#xE9;s debe aparecer ya esta carpeta:</p>
+<div align="center">
+  <img height src="Img/vscode.png">
+</div>
+<p>Si algo no funciona se puede borrar la carpeta .vscode y restaurar otra vez.</p>
+<p>Cambiamos la consola en el archivo launch.json</p>
+<div align="center">
+  <img height src="Img/launch.png">
+</div>
+<p>Podemos configurar el AutoSave para que se guarde autom&#xE1;ticamente.</p>
+<div align="center">
+  <img height src="Img/autosave.png">
 </div>
       </div>
       
