deploy: programacioniesbalmis/programacioniesbalmis@8e45bca6f08ca2fef8fc317b7d292c6a810812b2

--- a/Manual/Manual_Instalacion.html
+++ b/Manual/Manual_Instalacion.html
@@ -297,7 +297,7 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <p>Para instalar una extensi&#xF3;n pulsamos aqu&#xED;:</p>
 <div align="center">
-  <img height src="img/extensiones.png">
+  <img height src="Img/extensiones.png">
 </div>
 <div style="page-break-after:always;"></div>
 <p>Buscamos la extensi&#xF3;n que queremos instalar en nuestro caso <strong>C# for Visual Studio Code (powered by OmniSharp)</strong>, la seleccionamos y pulsamos Install.</p>
