deploy: programacioniesbalmis/programacioniesbalmis@0ab500733e6dc4b84753a1998cb3fc2362d220ae

--- a/Manual/Manual_Instalacion.html
+++ b/Manual/Manual_Instalacion.html
@@ -266,7 +266,11 @@ pre[data-line] .line-highlight[data-end]:after {
       <div class="mume markdown-preview  ">
       <h1 class="mume-header undefined" id="manual-de-instalaci%C3%B3n-visual-studio-code">Manual de instalaci&#xF3;n Visual Studio Code</h1>
 
+<p>Descargar estos apuntes en <a href="./Manual_Instalacion.pdf">pdf</a> o <a href="./Manual_Instalacion.html">html</a></p>
+<h2 class="mume-header" id="%C3%ADndice">&#xCD;ndice</h2>
+
 <ol>
+<li><a href="#%C3%ADndice">&#xCD;ndice</a></li>
 <li><a href="#instalamos-el-kit-de-desarrollo-net-core-sdk-y-el-net-framework">Instalamos el kit de desarrollo .NET Core SDK y el .NET Framework</a></li>
 <li><a href="#instalaci%C3%B3n-visual-studio-code">Instalaci&#xF3;n Visual Studio Code</a></li>
 <li><a href="#instalar-extensi%C3%B3n-de-c">Instalar extensi&#xF3;n de C#</a></li>
