deploy: programacioniesbalmis/programacioniesbalmis@be574eba5e6b927f50499678c6b535bf2e460d38

--- a/PrimerDia/guia_didactica_presencial.html
+++ b/PrimerDia/guia_didactica_presencial.html
@@ -403,11 +403,11 @@ En la medida de lo posible se tendr&#xE1; una atenci&#xF3;n individualizada por 
 <p><strong>Evaluables</strong>: Aquellos ejercicios marcados con un <em>&apos;check&apos;</em> verde &#x2705; y <strong>deber&#xE1;n entregarse de forma obligatoria</strong> por la plataforma Aules para su comprobaci&#xF3;n y calificaci&#xF3;n.</p>
 </li>
 <li>
-<p><strong>Autoevaluables</strong>: Los ejercicios sin el <em>&apos;check&apos;</em>, se podr&#xE1;n resolver en la tutor&#xED;as  y se proporcionar&#xE1; su soluci&#xF3;n al abrir el bloque.</p>
+<p><strong>Autoevaluables</strong>: Los ejercicios sin el <em>&apos;check&apos;</em>, se podr&#xE1;n resolver en clase  y se proporcionar&#xE1; su soluci&#xF3;n al abrir el bloque.</p>
 </li>
 </ul>
 <blockquote>
-<p>&#x270B; <strong>Importante:</strong> Todas las entregas realizar&#xE1; siempre a trav&#xE9;s de la plataforma educativa <em>Aules Semipresencial</em> y <strong>en ning&#xFA;n caso se aceptar&#xE1;n env&#xED;os fuera de plazo por otros medios telem&#xE1;ticos como pudiera ser el correo electr&#xF3;nico</strong>.</p>
+<p>&#x270B; <strong>Importante:</strong> Todas las entregas realizar&#xE1; siempre a trav&#xE9;s de la plataforma educativa <em>Aules Presencial</em> y <strong>en ning&#xFA;n caso se aceptar&#xE1;n env&#xED;os fuera de plazo por otros medios telem&#xE1;ticos como pudiera ser el correo electr&#xF3;nico</strong>.</p>
 </blockquote>
 </li>
 <li>
@@ -639,7 +639,6 @@ En la medida de lo posible se tendr&#xE1; una atenci&#xF3;n individualizada por 
 <ul>
 <li>Su correcci&#xF3;n y adecuaci&#xF3;n a lo solicitado.</li>
 <li>La entrega en plazo de los mismos.</li>
-<li>3/4 Presentaci&#xF3;n de la asignatura Xusa Garc&#xED;a y Juanjo Guarinos</li>
 <li>La puntualidad en la asistencia.</li>
 <li>La actitud positiva y exigente respecto a las actividades.</li>
 <li>El respeto y ayuda a sus compa&#xF1;eros y disposici&#xF3;n al trabajo en grupo.</li>
