deploy: programacioniesbalmis/programacioniesbalmis@e008b8632a9695e1c4a5ca5a3990889efa71e03a

--- a/B2-Sentencias_Control_y_Metodos/Tema3_1.html
+++ b/B2-Sentencias_Control_y_Metodos/Tema3_1.html
@@ -305,8 +305,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <h2 class="mume-header" id="instrucciones">Instrucciones</h2>
 
 <p>Cada instrucci&#xF3;n se separa o va delimitada por el car&#xE1;cter <strong>&apos;;&apos;</strong></p>
-<p>Puede contener asignaciones, comentarios e instrucciones de:<br>
-Puede contener asignaciones, comentarios e instrucciones de:</p>
+<p>Puede contener asignaciones, comentarios e instrucciones de:</p>
 <ul>
 <li>Control / condicionales.</li>
 <li>Iterativas / bucles.</li>
