deploy: programacioniesbalmis/programacioniesbalmis@f9c3e2a175e2eae3edc5f778b70992c70bca38f4

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Bibliografía</title>
+  <title>Índice ejercicios</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,7 +24,7 @@
       <div class="col">
         <div class="h-100 p-5 text-white bg-success border rounded-3">
           <div class="d-flex justify-content-between align-items-center">
-            <h2 class="w-100 display-4">Bibliografía</h2>
+            <h2 class="w-100 display-4">Ejercicios</h2>
             <div class="d-flex justify-content-end">
               <button class="btn btn-outline-light" id="btnColapsar">
                 <i class="fa fa-angle-up px-1"></i>
@@ -320,7 +320,21 @@
                   Ejercicios anónimos y extensores
                 </a>
               </li>
-              <!--POR AQUÏ-->
+              <li class="h6 list-group-item list-group-item-action">
+                <a target="_blank" href="https://programacioniesbalmis.github.io/B8-Programacion_Funcional/Ejercicios/4_ejercicios_programacion_funcional/4_ejercicios_programacion_funcional.html">
+                  Ejercicios programación funcional
+                </a>
+              </li>
+              <li class="h6 list-group-item list-group-item-action">
+                <a target="_blank" href="https://programacioniesbalmis.github.io/B8-Programacion_Funcional/Ejercicios/4_ejercicios_programacion_funcional/ejercicios_programacion_funcional_Apoyo/4_ejercicios_programacion_funcional_apoyo.html">
+                  Ejercicios programación funcional apoyo
+                </a>
+              </li>
+              <li class="h6 list-group-item list-group-item-action">
+                <a target="_blank" href="https://programacioniesbalmis.github.io/B8-Programacion_Funcional/Ejercicios/5_ejercicios_recursividad_simple/5_ejercicios_recursividad_simple.html">
+                  Ejercicios recursividad
+                </a>
+              </li>
             </ul>
           </div>
         </div>
