--- a/index_es.html
+++ b/index_es.html
@@ -26,7 +26,7 @@
           <div class="d-flex justify-content-between align-items-center">
             <h2 class="display-3">Programación</h2>
             <div class="d-flex justify-content-end">
-              <a href="bibliografia.html"><button class="btn btn-outline-light">Bibliografía</button></a>
+              <a href="ejercicios.html"><button class="btn btn-outline-light">Ejercicios</button></a>
               <a href="index.html"><button class="btn btn-outline-light"><i class=" fa fa-home"></i></button></a>
             </div>
           </div>
