--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
       
     </div>
 
-    <!-- INICIO CONTENIDOS OCULTOS
-
-      <div class="row g-0">
+    <div class="row g-0">
 
       <div class="col-xxl-6">
         <a href="./B2-Sentencias_Control_y_Metodos/Tema3_2.html">
@@ -90,6 +88,9 @@
           </div>
         </a>
       </div>
+
+    </div>
+    <!-- INICIO CONTENIDOS OCULTOS
 
       <div class="col-xxl-6">
         <a href="./B2-Sentencias_Control_y_Metodos/Tema4.html">
