deploy: programacioniesbalmis/programacioniesbalmis@fa04e43cd8acdb50216be0e08cb0d4f4188f60f1

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="col-xxl-6">
         <a href="./B3-POO1_TE_y_ER/Tema5_1.html">
           <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
-            <div class="h4">Tema 5.1 - Manejo de cadenas y tablas unidimensionales</div>
+            <div class="h4">Tema 5.1 - Manejo de cadenas y tablas unidimensionales<br></div>
           </div>
         </a>
       </div>
@@ -120,7 +120,7 @@
       </div>
       
     </div>
-       <!-- INICIO CONTENIDOS OCULTOS
+  
  
 
     <div class="row g-0">
@@ -133,6 +133,7 @@
         </a>
       </div>
 
+           <!-- INICIO CONTENIDOS OCULTOS
       <div class="col-xxl-6">
         <a href="./B4-POO2/Tema7_1.html">
           <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
