deploy: programacioniesbalmis/programacioniesbalmis@8644fa1f31b024d3a54baec2ee1f6b019edc3f3c

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -251,6 +251,12 @@
                   Ejercicios polimorfismo y propiedades
                 </a>
               </li>
+
+                <li class="h6 list-group-item list-group-item-action">
+                <a target="_blank" href="https://programacioniesbalmis.github.io//B6-POO4_Avanzada/Ejercicios/3_ejercicios_redefinicion_operadores/3_ejercicios_operadores.html">
+                  Ejercicios redefinición operadores
+                </a>
+              </li>
               <li class="h6 list-group-item list-group-item-action">
                 <a target="_blank" href="https://programacioniesbalmis.github.io//B6-POO4_Avanzada/Ejercicios/4_ejercicios_interfaces/4_ejercicios_interfaces.html">
                   Ejercicios interfaces
