deploy: programacioniesbalmis/programacioniesbalmis@4f6390ee06db7283eb3cb880c94bb5cbaee507f1

--- a/B7-Colecciones/Ejercicios/2_ejercicios_colecciones_bcl/2_ejercicios_colecciones_bcl.html
+++ b/B7-Colecciones/Ejercicios/2_ejercicios_colecciones_bcl/2_ejercicios_colecciones_bcl.html
@@ -30,6 +30,15 @@
   border-radius: 5px;
   box-shadow: 0 0 7px 0 rgba(78, 120, 158, 0.1);
 }
+.markdown-preview.markdown-preview .resumen {
+  background-color: #d6d6d6;
+  border: 2px solid #b0b0b0;
+  padding: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 0 0 7px 0 rgba(78, 120, 158, 0.1);
+}
 .markdown-preview.markdown-preview .ejercicio {
   background-color: #f5faf5;
   border: 2px solid #969b96;
