deploy: programacioniesbalmis/programacioniesbalmis@074cb68fe4c3c995c51d6f2e10cb5b68dbcc77d7

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -298,6 +298,11 @@
                   Ejercicios colecciones BCL
                 </a>
               </li>
+              <li class="h6 list-group-item list-group-item-action">
+                <a target="_blank" href="https://programacioniesbalmis.github.io//B7-Colecciones/Ejercicios/2_ejercicios_colecciones_bcl/2_ejercicios_colecciones_bcl_faciles_con_solucion.html">
+                  Ejercicios pilas y colas con solución
+                </a>
+              </li>
             </ul>
           </div>
         </div>
